--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,13 @@
 }
 
 body {
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container {
+  margin: 0 auto;
 }
 
 /****************** Landing Page ******************/
@@ -17,10 +22,11 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 100%;
+  width: 87.5vw;
 }
 
 .landingPage--logo {
-  height: 20%;
+  height: 10vh;
 }
 
 .landingPage--startBtn {
@@ -30,16 +36,9 @@ body {
   cursor: pointer;
 }
 
-/****************** Game ******************/
-.game {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/********* Game - play screen *********/
-.game__playScreen {
-  height: 100vmin;
+/****************** Game - game board ******************/
+.gameBoard {
+  height: 100%;
   width: 100vmin;
   background-color: skyblue;
   display: grid;
@@ -47,33 +46,74 @@ body {
   grid-template-rows: repeat(20, 1fr);
 }
 
-.game__play-screen--cloud {
+.gameBoard--cloud {
   background: white;
 }
 
-.game__play-screen--dirt {
+.gameBoard--dirt {
   background: url("../assets/img/dirt.jpg") no-repeat center center/cover;
 }
 
-.game__play-screen--grass {
+.gameBoard--grass {
   background: url("../assets/img/mcdirt.jpg") no-repeat center center/cover;
 }
 
-.game__play-screen--log {
+.gameBoard--log {
   background: url("../assets/img/wood.jpg") no-repeat center center/cover;
 }
 
-.game__play-screen--stone {
+.gameBoard--stone {
   background: url("../assets/img/cobblestone.jpg") no-repeat center center/cover;
 }
 
-.game__play-screen--leaves {
+.gameBoard--leaves {
   background: url("../assets/img/leaves.png") no-repeat center center/cover;
 }
 
-/********* Game - inventory *********/
-/* .game__inventory {
-} */
+/****************** Game - btn info ******************/
+.btnInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem;
+  background: black;
+}
+
+.btn {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  height: 7rem;
+  width: 7rem;
+  margin: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  border: 0.2rem solid white;
+  background: wheat;
+}
+
+.btn img,
+.inventory {
+  height: 4rem;
+  width: 4rem;
+}
+
+.inventory {
+  margin: 3rem 1rem 0 1rem;
+  border: 0.2rem solid white;
+  cursor: pointer;
+  background: wheat;
+}
+
+.btn--reset {
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+  margin: 10rem 1rem 0 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  border: 0.2rem solid white;
+  background: wheat;
+}
 
 /****************** Utiltes ******************/
 .display-none {
