--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 100%;
-  width: 87.5vw;
+  width: 87vw;
 }
 
 .landingPage--logo {
@@ -34,6 +34,59 @@ body {
   font-size: 5rem;
   font-family: "Minecraft";
   cursor: pointer;
+}
+
+/****************** Game - btn info ******************/
+.btnInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem;
+  background: black;
+}
+
+.btn {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  height: 7.5rem;
+  width: 7.5rem;
+  margin: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  border: 0.5rem solid white;
+  background: wheat;
+}
+
+.btn img,
+#inventory {
+  height: 4rem;
+  width: 4rem;
+}
+
+#inventory {
+  margin: 3rem 1rem 0 1rem;
+  border: 0.2rem solid white;
+  cursor: pointer;
+  /* background: wheat; */
+}
+
+.btn--reset {
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+  margin: 10rem 1rem 0 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+  border: 0.5rem solid white;
+  background: wheat;
+}
+
+.border--blue {
+  border: 0.5rem solid blue;
+}
+
+.border--red {
+  border: 0.5rem solid red;
 }
 
 /****************** Game - game board ******************/
@@ -68,59 +121,6 @@ body {
 
 .gameBoard--leaves {
   background: url("../assets/img/leaves.png") no-repeat center center/cover;
-}
-
-/****************** Game - btn info ******************/
-.btnInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 0 5rem;
-  background: black;
-}
-
-.btn {
-  padding: 0.5rem;
-  font-size: 1.5rem;
-  height: 7rem;
-  width: 7rem;
-  margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  border: 0.2rem solid white;
-  background: wheat;
-}
-
-.btn img,
-.inventory {
-  height: 4rem;
-  width: 4rem;
-}
-
-.inventory {
-  margin: 3rem 1rem 0 1rem;
-  border: 0.2rem solid white;
-  cursor: pointer;
-  background: wheat;
-}
-
-.btn--reset {
-  padding: 1rem 1.5rem;
-  font-size: 1.5rem;
-  margin: 10rem 1rem 0 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  border: 0.2rem solid white;
-  background: wheat;
-}
-
-.border--red {
-  border: 0.2rem solid red;
-}
-
-.border--blue {
-  border: 0.2rem solid blue;
 }
 
 /****************** Utiltes ******************/
