--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,11 +12,28 @@
 body {
   min-height: 100vh;
   display: flex;
-  justify-content: space-between;
 }
 
 .container {
   margin: 0 auto;
+}
+
+/****************** Utiltes ******************/
+.display-none {
+  display: none !important;
+}
+
+.btn-hover {
+  background: wheat;
+  border: 0.5rem solid white;
+  cursor: pointer;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-hover:hover {
+  background: rgb(211, 182, 129);
+  border: 0.5rem solid rgb(184, 184, 184);
 }
 
 /****************** Landing Page ******************/
@@ -38,8 +55,7 @@ body {
   padding: 1rem;
   font-size: 5rem;
   font-family: "Minecraft";
-  cursor: pointer;
-  background: wheat;
+  font-weight: 100;
 }
 
 .landingPage__tutorial {
@@ -91,6 +107,13 @@ body {
   background: black;
 }
 
+.worlds-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .btnInfo__tools {
   display: flex;
   flex-direction: column;
@@ -104,10 +127,12 @@ body {
   height: 7.5rem;
   width: 7.5rem;
   margin: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  border: 0.5rem solid white;
-  background: wheat;
+}
+
+.worlds {
+  text-align: center;
+  padding: 1.5rem 0;
+  border: 0.5rem solid goldenrod;
 }
 
 .btn img,
@@ -125,16 +150,14 @@ body {
 #inventory {
   text-align: center;
   padding: 1.5rem 0;
+  font-size: 1.4rem;
 }
 
 .closeInventory {
   color: black;
   font-size: 3rem;
   margin: 2rem 3rem 0 0;
-  background: white;
-  border: 0.5rem solid wheat;
   padding: 0 0.5rem;
-  cursor: pointer;
 }
 
 .inventoryContainer {
@@ -156,10 +179,6 @@ body {
   padding: 1rem 1.5rem;
   font-size: 1.5rem;
   margin: 10rem 1rem 0 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: pointer;
-  border: 0.5rem solid white;
-  background: wheat;
 }
 
 .border--green {
@@ -175,40 +194,67 @@ body {
 }
 
 /****************** Game - game board ******************/
-.gameBoard {
+#gameBoard {
   height: 100%;
-  width: 100vmin;
-  background-color: skyblue;
+  width: 50vw;
   display: grid;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
+}
+
+.gameBoard--dark-bg {
+  background: url("../assets/img/night-bg.jpg") no-repeat center center/cover;
+}
+
+.gameBoard--light-bg {
+  background: skyblue;
 }
 
 .gameBoard--cloud {
   background: white;
 }
 
+.gameBoard--cloud-dark {
+  background: rgb(163, 163, 163);
+}
+
 .gameBoard--dirt {
   background: url("../assets/img/dirt.jpg") no-repeat center center/cover;
+}
+
+.gameBoard--dirt-dark {
+  background: url("../assets/img/dirt-dark.jpg") no-repeat center center/cover;
 }
 
 .gameBoard--grass {
   background: url("../assets/img/mcdirt.jpg") no-repeat center center/cover;
 }
 
+.gameBoard--grass-dark {
+  background: url("../assets/img/mcdirt-dark.jpg") no-repeat center center/cover;
+}
+
 .gameBoard--log {
   background: url("../assets/img/wood.jpg") no-repeat center center/cover;
+}
+
+.gameBoard--log-dark {
+  background: url("../assets/img/wood-dark.jpg") no-repeat center center/cover;
 }
 
 .gameBoard--stone {
   background: url("../assets/img/cobblestone.jpg") no-repeat center center/cover;
 }
 
+.gameBoard--stone-dark {
+  background: url("../assets/img/cobblestone-dark.jpg") no-repeat center
+    center/cover;
+}
+
 .gameBoard--leaves {
   background: url("../assets/img/leaves.png") no-repeat center center/cover;
 }
 
-/****************** Utiltes ******************/
-.display-none {
-  display: none !important;
+.gameBoard--leaves-dark {
+  background: url("../assets/img/leaves-dark.png") no-repeat center center/cover;
 }
